objects/Account.object
<CustomObject>
    <fields>
        <fullName>L2O_Lead_Account_Type__c</fullName>
        <description>For mapping lead account type</description>
        <inlineHelpText>For mapping lead account type</inlineHelpText>
        <label>Lead Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Health System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Source__c</fullName>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <label>Legacy Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GCRM</fullName>
                    <default>true</default>
                    <label>GCRM</label>
                </value>
                <value>
                    <fullName>USGH</fullName>
                </value>
                <value>
                    <fullName>ITH</fullName>
                </value>
                <value>
                    <fullName>LVGO</fullName>
                </value>
                <value>
                    <fullName>Comitl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Minority_Owned_Business_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minority Owned Business Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Ownership_Control_Type__c</fullName>
        <label>Ownership Control Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Ownership_Control_Year__c</fullName>
        <label>Ownership Control Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Account_DHC_Network_ID__c</fullName>
        <description>Enrichment field as part of definitive healthcare tool</description>
        <label>Parent Account DHC Network ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Account_DHC_Parent_Network_ID__c</fullName>
        <description>Enrichment field as part of definitive healthcare tool</description>
        <label>Parent Account DHC Parent Network ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Account_Definitive_ID__c</fullName>
        <description>Enrichment field as part of definitive healthcare tool</description>
        <label>Parent Account Definitive ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Account_ID_18__c</fullName>
        <description>Enrichment field as part of definitive healthcare tool</description>
        <label>Parent Account ID #18</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Business_Name__c</fullName>
        <label>Parent Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_D_U_N_S_Number__c</fullName>
        <label>Parent D-U-N-S Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Primary_Business_Name__c</fullName>
        <label>Primary Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Primary_Industry_Code__c</fullName>
        <label>Primary Industry Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Reason_for_Account_Disqualification__c</fullName>
        <description>Reason Account was not qualified for selling</description>
        <label>Reason for Account Disqualification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Referencing_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up to Contact</description>
        <label>Referencing Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Referencing Client)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Referral_Notes__c</fullName>
        <description>Track referrals related notes</description>
        <label>Referral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Referral_Tier__c</fullName>
        <description>What level Tier (1-3) does this Account belong to</description>
        <label>Referral Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Referral_Tier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the Account referred</description>
        <label>Referral?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Relationship_Strength__c</fullName>
        <description>Describes the Accounts relationships strength</description>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Shipping_County__c</fullName>
        <description>County from Shipping Address</description>
        <label>Shipping County</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Taxpayer_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>For domestic only  - identifiers the clients tax payer number</description>
        <externalId>true</externalId>
        <label>Taxpayer Number</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Territory_assignment_field__c</fullName>
        <description>Helper field to help define which territory the Account should be assigned to</description>
        <formula>Billing_County__c + TEXT(BillingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory assignment field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Total_US_Employees_Benefits_Enrolled__c</fullName>
        <description>Tracks potential volume at a customer</description>
        <inlineHelpText>&apos;Total US Employees Benefits - Enrolled&apos; has been deprecated.</inlineHelpText>
        <label>**Deprecated** TotalUSEmployeesBenefitsE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Total_of_Lost_Opportunities__c</fullName>
        <description>Numerical value of lost business</description>
        <label>Total # of Lost Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Total_of_Open_Opportunities__c</fullName>
        <description>Numerical value of pending business</description>
        <label>Total # of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Total_of_Won_Opportunities__c</fullName>
        <description>Numerical value of successful completion of Sales</description>
        <label>Total # of Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Trade_Style_Name__c</fullName>
        <label>Trade Style Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Ultimate_Parent_Account_Legal__c</fullName>
        <description>Used for Data Migration</description>
        <label>Ultimate Parent Account (Legal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Ultimate_Parent_Account_TEXT__c</fullName>
        <description>Used for Data Migration</description>
        <label>Ultimate Parent Account (TEXT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Ultimate_Parent_Account__c</fullName>
        <description>Used for Data Migration</description>
        <label>Ultimate Parent Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Veteran_Owned_Business_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veteran Owned Business Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Woman_Owned_Business_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Woman Owned Business Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_customer_number__c</fullName>
        <description>Customer number originating with Sales Admin.</description>
        <inlineHelpText>May be reference for Integration to Great Plains on HHS side.</inlineHelpText>
        <label>Customer Number</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_fully_insured_population__c</fullName>
        <description>Number of fully insured employees</description>
        <label>Fully Insured Population</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_prior_year_number_of_employees__c</fullName>
        <description>Prior year number of employees</description>
        <label>Prior Year Number of Employees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Legacy_Clean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Legacy Clean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Legacy_Date_Cleaned__c</fullName>
        <label>Project Legacy Date Cleaned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s assets, or choose Contract Based to make renewals based off of contracts created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_County__c</fullName>
        <label>Shipping County</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <description>Additional info</description>
        <label>Test Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Employees__c</fullName>
        <label>US Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bizible2__Engagement_Score__c</fullName>
        <description>Bizible&apos;s predictive metric using historical data to indicate how engaged an account is</description>
        <inlineHelpText>Bizible&apos;s predictive metric using historical data to indicate how engaged an account is</inlineHelpText>
        <label>Predictive Engagement Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dnb_exclude_company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from D&amp;B Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Current_Sales_Campaign__c</fullName>
        <label>Current Sales Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Activity_By_Sales__c</fullName>
        <label>Last Activity by Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Sales_Engagement__c</fullName>
        <label>Last Sales Engagement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Account_Full_List?mode=fullList&amp;id=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Last_Replied__c</fullName>
        <label>Sales Last Replied</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__testCurrency__c</fullName>
        <label>Currency Test</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DHC_ID_Holder__c</fullName>
        <label>DHC ID Holder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Address1__c</fullName>
        <label>DHC Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Address__c</fullName>
        <label>DHC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_AffiliationsACO__c</fullName>
        <label>DHC ACO Affiliations</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_AffiliationsGPO__c</fullName>
        <label>DHC GPO/Pharm/RPC Affiliations</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_AvgDailyCensus__c</fullName>
        <label>DHC Avg. Daily Census</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_AvgLengthOfStay__c</fullName>
        <label>DHC Avg. Length of Stay</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_CashOnHand__c</fullName>
        <label>DHC Cash on Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_DateCreated__c</fullName>
        <label>DHC Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_DaysCashOnHand__c</fullName>
        <label>DHC Days Cash On Hand</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_EMR_Vendor_Ambulatory__c</fullName>
        <label>DHC EMR Vendor Ambulatory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_EMR_Vendor_Inpatient__c</fullName>
        <label>DHC EMR Vendor Inpatient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_FinancialDataDate__c</fullName>
        <description>Financial Data update date</description>
        <label>DHC Financial Data Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_FirmType__c</fullName>
        <label>DHC Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_HIEAffiliations__c</fullName>
        <label>DHC HIE Affiliations</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_HQCity__c</fullName>
        <label>DHC City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_HospitalID__c</fullName>
        <label>Definitive ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Hospital_Name__c</fullName>
        <description>DefinitiveHC Hospital Name</description>
        <inlineHelpText>Hospital Name</inlineHelpText>
        <label>DHC Hospital Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Hospital_Profile__c</fullName>
        <description>DefinitiveHC Hospital Profile</description>
        <inlineHelpText>DefinitiveHC Hospital Profile</inlineHelpText>
        <label>DHC Provider Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Hospital_Type__c</fullName>
        <label>DHC Hospital Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_MeaningfulUseStatus__c</fullName>
        <label>DHC Meaningful Use Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_MedicareProviderNumber__c</fullName>
        <label>DHC Medicare Provider Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NetMedicareRevenue__c</fullName>
        <label>DHC Net Medicare Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NetPatientRev__c</fullName>
        <label>DHC Net Patient Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NetworkID__c</fullName>
        <description>Definitive HC Network ID</description>
        <label>DHC Network ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Network_Name__c</fullName>
        <description>Name of the network to which the hospital belongs to.</description>
        <label>DHC Network Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumAffiliatedPhysicians__c</fullName>
        <label>DHC # of Affiliated Physicians</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumBeds__c</fullName>
        <description>Number of Beds in the hospital</description>
        <label>DHC # of Beds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumDischarges__c</fullName>
        <label>DHC # of Discharges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumEmployees__c</fullName>
        <label>DHC # of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumHospitalsInNetwork__c</fullName>
        <label>DHC # of Hospitals in Network</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumMedicareBeds__c</fullName>
        <label>DHC # of Medicare Beds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_NumOperatingRooms__c</fullName>
        <label>DHC # of Operating Rooms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_OperatingIncome__c</fullName>
        <label>DHC Operating Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_OptOutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an account has opted out of automatic sync.</description>
        <label>DHC Opt Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_OwnershipStatus__c</fullName>
        <label>DHC Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Parent_NetworkID__c</fullName>
        <description>Parent Network ID</description>
        <label>DHC Parent Network ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Parent_Network_Name__c</fullName>
        <description>Name of the Parent Network</description>
        <label>DHC Parent Network Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_PayorMixPctMedicaid__c</fullName>
        <label>DHC Payor Mix % Medicaid</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_PayorMixPctMedicare__c</fullName>
        <label>DHC Payor Mix % Medicare</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_PayorMixPctPrivateSelf__c</fullName>
        <label>DHC Payor Mix % Private/Self/Other</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Phone__c</fullName>
        <label>DHC Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_State__c</fullName>
        <label>DHC State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_SyncTime__c</fullName>
        <description>Last time the account data was synced with DefHC database.</description>
        <label>DHC Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_TotalMedicareCharges__c</fullName>
        <label>DHC Total Medicare Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Website__c</fullName>
        <label>DHC Provider Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_ZipCode__c</fullName>
        <label>DHC Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ALTF__Altify_Accounts_CRUD_Search</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>L2O_Account_Status__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.INDUSTRY</field>
            <operation>equals</operation>
        </filters>
        <label>Altify Accounts CRUD Search</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>L2O_Account_Status__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
</CustomObject>